--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <body>
     <h1>Welcome to My Page!</h1>
     <h2>Tasfia Mahjarin</h2>
-    <p>This class semester: [Winter] [2025]</p>
-    <p>Class Name: [Geospatial Software Development]</p>
+    <p>This class semester: Winter-2025</p>
+    <p>Class Name: Geospatial Software Development-CE 514</p>
 
     <h3>About Me</h3>
     <img src="your-picture.jpg" alt="Your Picture">
@@ -38,9 +38,9 @@
 
     <h3>Things I’m Interested In</h3>
     <div class="interests">
-        <img src="interest1.jpg" alt="Interest 1">
-        <img src="interest2.jpg" alt="Interest 2">
-        <img src="interest3.jpg" alt="Interest 3">
+        <img src="Interest1.jpg" alt="Interest 1">
+        <img src="Interest2.jpg" alt="Interest 2">
+        <img src="Interest3.jpg" alt="Interest 3">
     </div>
 
     <h3>Useful Links</h3>
