--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="interests">
         <img src="Interest1.jpg" alt="Interest 1">
         <img src="Interest2.jpg" alt="Interest 2">
-        <img src="Interest3.jpg" alt="Interest 3">
+        <img src="Interest3.jpeg" alt="Interest 3">
     </div>
 
     <h3>Useful Links</h3>
