--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <h3>About Me</h3>
     <img src="your-picture.jpg" alt="Your Picture">
-    <p>I am from Bangladesh. My favorite thing to do is to travel to new places and spend times with family, my cat, and friends. I am fond of watching sunrises and sunsets. Not to forget, I am a big foodie.</p>
+    <p>Hello! I am Tasfia and I am from Bangladesh. Presently, I am living in Utah, USA. My favorite thing to do is to travel to new places and spend times with family, my cat, and friends. I am fond of watching sunrises and sunsets. Not to forget, I am a big foodie. I am doing my Master's in Brigham Young University (BYU) under the supervision of Dr. Dan Ames.</p>
 
     <h3>Things I’m Interested In</h3>
     <div class="interests">
