--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <h3>About Me</h3>
     <img src="your-picture.jpg" alt="Your Picture">
-    <p>Hello! I am Tasfia and I am from Bangladesh. Presently, I am living in Utah, USA. My favorite thing to do is to travel to new places and spend times with family, my cat, and friends. I am fond of watching sunrises and sunsets. Not to forget, I am a big foodie. I am doing my Master's in Civil and Construction Engineering Department at Brigham Young University (BYU) under the supervision of Dr. Dan Ames.</p>
+    <p>Hello! I am Tasfia and I am from Bangladesh. Presently, I am living in Utah, USA.  I am doing my Master's in Civil and Construction Engineering Department at Brigham Young University (BYU) under the supervision of Dr. Dan Ames. My favorite thing to do is to travel to new places and spend times with family, my cat, and friends. I am fond of watching sunrises and sunsets. Not to forget, I am a big foodie.</p>
 
     <h3>Things I’m Interested In</h3>
     <div class="interests">
@@ -48,7 +48,7 @@
         
         <li><a href="https://www.linkedin.com/in/tasfiamahjarin26" target="_blank">My LinkedIn</a></li>
         <li><a href="https://github.com/tasfia26" target="_blank">My GitHub</a></li>
-        <li><a href="https://cce.byu.edu/" target="_blank">Civil and Construction Engineering Department BYU</a></li>
+        <li><a href="https://cce.byu.edu/" target="_blank">Civil and Construction Engineering Department (BYU)</a></li>
         <li><a href="https://www.instagram.com/tasfia_mahjarin" target="_blank">My Instagram</a></li>
     </ul>
 </body>
