--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             text-decoration: none;
             color: blue;
         }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
     </style>
 </head>
 <body>
