--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             list-style-type: none;
             padding: 0;
         }
+        ul li {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
