--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 <body>
     <h1>Welcome to My Page!</h1>
     <h2>Tasfia Mahjarin</h2>
-    <p>This class semester: Winter-2025</p>
-    <p>Class Name: Geospatial Software Development-CE 514</p>
+    <p>Course Name: Geospatial Software Development-CE 514</p>
+    <p>Semester: Winter - 2025</p>
+   
 
     <h3>About Me</h3>
     <img src="your-picture.jpg" alt="Your Picture">
