--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             font-family: Arial, sans-serif;
             line-height: 1.6;
             text-align: center;
+            background: linear-gradient(135deg, #e3f2fd, #bbdefb);
+            margin: 0;
+            padding: 0;
         }
         img {
             border-radius: 50%;
@@ -19,10 +22,22 @@
             width: 100px;
             height: 100px;
             margin: 10px;
+            border: 2px solid #90caf9;
+            border-radius: 10px;
+            transition: transform 0.3s ease-in-out;
+        }
+        .interests img:hover {
+            transform: scale(1.1);
+        }
+        h1, h2, h3 {
+            color: #0d47a1;
         }
         a {
             text-decoration: none;
-            color: blue;
+            color: #1565c0;
+        }
+        a:hover {
+            text-decoration: underline;
         }
         ul {
             list-style-type: none;
@@ -30,6 +45,9 @@
         }
         ul li {
             margin: 5px 0;
+        }
+        p {
+            color: #424242;
         }
     </style>
 </head>
@@ -39,7 +57,6 @@
     <p>Course Name: Geospatial Software Development - CE 514</p>
     <p>Semester: Winter - 2025</p>
    
-
     <h3>About Me</h3>
     <img src="your-picture.jpg" alt="Your Picture">
     <p>Hello! I am Tasfia and I am from Bangladesh. Presently, I am living in Utah, USA.  I am doing my Master's in Civil and Construction Engineering Department at Brigham Young University (BYU) under the supervision of Dr. Dan Ames. My favorite thing to do is to travel to new places and spend times with family, my cat, and friends. I am fond of watching sunrises and sunsets. Not to forget, I am a big foodie.</p>
@@ -53,7 +70,6 @@
 
     <h3>Useful Links</h3>
     <ul>
-        
         <li><a href="https://www.linkedin.com/in/tasfiamahjarin26" target="_blank">My LinkedIn</a></li>
         <li><a href="https://github.com/tasfia26" target="_blank">My GitHub</a></li>
         <li><a href="https://cce.byu.edu/" target="_blank">Civil and Construction Engineering Department (BYU)</a></li>
