--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         }
         img {
             border-radius: 50%;
-            width: 150px;
-            height: 150px;
+            width: 200px;
+            height: 200px;
         }
         .interests img {
-            width: 100px;
-            height: 100px;
+            width: 150px;
+            height: 150px;
             margin: 10px;
             border: 2px solid #90caf9;
             border-radius: 10px;
@@ -30,7 +30,20 @@
             transform: scale(1.1);
         }
         h1, h2, h3 {
-            color: #0d47a1;
+            color: white;
+            padding: 10px;
+            margin: 20px auto;
+            border-radius: 8px;
+            display: inline-block;
+        }
+        h1 {
+            background: linear-gradient(90deg, #2196f3, #21cbf3);
+        }
+        h2 {
+            background: linear-gradient(90deg, #4caf50, #81c784);
+        }
+        h3 {
+            background: linear-gradient(90deg, #ff5722, #ff7043);
         }
         a {
             text-decoration: none;
