--- a/index.html
+++ b/index.html
@@ -3,26 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My Page</title>
+    <title>Your Name's Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             text-align: center;
-            background: url('background.jpg') no-repeat center center fixed;
-            background-size: cover;
+            background: linear-gradient(135deg, #e3f2fd, #bbdefb);
             margin: 0;
             padding: 0;
-            color: #333;
         }
         img {
             border-radius: 50%;
-            width: 200px;
-            height: 200px;
-        }
-        .interests img {
             width: 150px;
             height: 150px;
+        }
+        .interests img {
+            width: 100px;
+            height: 100px;
             margin: 10px;
             border: 2px solid #90caf9;
             border-radius: 10px;
@@ -32,30 +30,7 @@
             transform: scale(1.1);
         }
         h1, h2, h3 {
-            color: white;
-            padding: 10px;
-            margin: 20px auto;
-            border: 2px dashed #fff;
-            border-radius: 8px;
-            display: inline-block;
-            background: linear-gradient(90deg, #42a5f5, #478ed1);
-        }
-        h1 {
-            font-size: 2.5rem;
-        }
-        h2 {
-            font-size: 2rem;
-            margin-top: 5px;
-        }
-        .about-heading {
-            position: relative;
-            color: white;
-            padding: 8px;
-            background: linear-gradient(90deg, #4caf50, #81c784);
-            border: 2px dashed #fff;
-            border-radius: 8px;
-            display: inline-block;
-            margin-bottom: -50px; /* Adjusted to overlap the picture */
+            color: #0d47a1;
         }
         a {
             text-decoration: none;
@@ -77,12 +52,12 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Page</h1>
+    <h1>Welcome to My Page!</h1>
     <h2>Tasfia Mahjarin</h2>
     <p>Course Name: Geospatial Software Development - CE 514</p>
     <p>Semester: Winter - 2025</p>
-
-    <div class="about-heading">About Me</div>
+   
+    <h3>About Me</h3>
     <img src="your-picture.jpg" alt="Your Picture">
     <p>Hello! I am Tasfia and I am from Bangladesh. Presently, I am living in Utah, USA.  I am doing my Master's in Civil and Construction Engineering Department at Brigham Young University (BYU) under the supervision of Dr. Dan Ames. My favorite thing to do is to travel to new places and spend times with family, my cat, and friends. I am fond of watching sunrises and sunsets. Not to forget, I am a big foodie.</p>
 
@@ -102,3 +77,4 @@
     </ul>
 </body>
 </html>
+
