--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
             font-family: Arial, sans-serif;
             line-height: 1.6;
             text-align: center;
-            background: linear-gradient(135deg, #e3f2fd, #bbdefb);
+            /* Add background image and keep the gradient as a fallback */
+            background: url('background2.jpg') no-repeat center center fixed;
+            background-size: cover;
             margin: 0;
             padding: 0;
         }
@@ -59,7 +61,7 @@
    
     <h3>About Me</h3>
     <img src="your-picture.jpg" alt="Your Picture">
-    <p>Hello! I am Tasfia and I am from Bangladesh. Presently, I am living in Utah, USA.  I am doing my Master's in Civil and Construction Engineering Department at Brigham Young University (BYU) under the supervision of Dr. Dan Ames. My favorite thing to do is to travel to new places and spend times with family, my cat, and friends. I am fond of watching sunrises and sunsets. Not to forget, I am a big foodie.</p>
+    <p>Hello! I am Tasfia and I am from Bangladesh. Presently, I am living in Utah, USA.  I am doing my Master's in Civil and Construction Engineering Department at Brigham Young University (BYU) under the supervision of Dr. Dan Ames. My favorite thing to do is to travel to new places and spend time with family, my cat, and friends. I am fond of watching sunrises and sunsets. Not to forget, I am a big foodie.</p>
 
     <h3>Things I’m Interested In</h3>
     <div class="interests">
@@ -77,4 +79,3 @@
     </ul>
 </body>
 </html>
-
