--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
             font-family: Arial, sans-serif;
             line-height: 1.6;
             text-align: center;
-            /* Add background image and keep the gradient as a fallback */
-            background: url('background3.jpg') no-repeat center center fixed;
-            background-size: cover;
+            background: linear-gradient(135deg, #e3f2fd, #bbdefb);
             margin: 0;
             padding: 0;
         }
@@ -76,6 +74,7 @@
         <li><a href="https://github.com/tasfia26" target="_blank">My GitHub</a></li>
         <li><a href="https://cce.byu.edu/" target="_blank">Civil and Construction Engineering Department (BYU)</a></li>
         <li><a href="https://www.instagram.com/tasfia_mahjarin" target="_blank">My Instagram</a></li>
+        <li><a href="CE514.html">Go to CE514 Page</a></li> <!-- Link to CE514 page -->
     </ul>
 </body>
 </html>
