--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <li><a href="https://github.com/tasfia26" target="_blank">My GitHub</a></li>
         <li><a href="https://cce.byu.edu/" target="_blank">Civil and Construction Engineering Department (BYU)</a></li>
         <li><a href="https://www.instagram.com/tasfia_mahjarin" target="_blank">My Instagram</a></li>
-        <li><a href="CE514.html">Go to CE514 Page</a></li> <!-- Link to CE514 page -->
+        <li><a href="CE514.html" target="_blank">Go to CE514 Page</a></li> <!-- Link to CE514 page -->
     </ul>
 </body>
 </html>
