--- a/CE514.html
+++ b/CE514.html
@@ -25,10 +25,10 @@
             margin: 10px;
             border: 2px solid #90caf9;
             border-radius: 10px;
-            transition: transform 0.3s ease-in-out;
+            transition: transform 0.5s ease-in-out; /* Set transition duration and easing */
         }
         .interests img:hover {
-            transform: scale(1.1);
+            transform: scale(1.5); /* Make the image 1.5 times bigger */
         }
         h1, h2, h3 {
             color: #0d47a1;
