--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <li><a href="https://cce.byu.edu/" target="_blank">Civil and Construction Engineering Department (BYU)</a></li>
         <li><a href="https://www.instagram.com/tasfia_mahjarin" target="_blank">My Instagram</a></li>
         <li><a href="CE514.html" target="_blank">Go to CE514 Page</a></li> <!-- Link to CE514 page -->
-        <li><a href="leaflet.html">View My Locations on the Map</a></li> <!-- Link to leaflet.html -->
+        <li><a href="leaflet.html" target="_blank">View My Locations on the Map</a></li> <!-- Link to leaflet.html -->
     </ul>
 </body>
 </html>
