--- a/CE514.html
+++ b/CE514.html
@@ -87,7 +87,7 @@
         <li><a href="https://github.com/tasfia26" target="_blank">My GitHub</a></li>
         <li><a href="https://cce.byu.edu/" target="_blank">Civil and Construction Engineering Department (BYU)</a></li>
         <li><a href="https://www.instagram.com/tasfia_mahjarin" target="_blank">My Instagram</a></li>
-        <li><a href="leaflet.html">View My Locations on the Map</a></li> <!-- Link to leaflet.html -->
+        <li><a href="leaflet.html" target="_blank">View My Locations on the Map</a></li> <!-- Link to leaflet.html -->
     </ul>
 </body>
 </html>
