--- a/CE514.html
+++ b/CE514.html
@@ -65,7 +65,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Page!</h1>
+    <h1>Welcome to My CE - 514 Page!</h1>
     <h2>Tasfia Mahjarin</h2>
     <p>Course Name: Geospatial Software Development - CE 514</p>
     <p>Semester: Winter - 2025</p>
