--- a/CE514.html
+++ b/CE514.html
@@ -72,7 +72,7 @@
    
     <h3>About Me</h3>
     <img id="profile-picture" src="your-picture.jpg" alt="Your Picture">
-    <p>Hello! I am Tasfia and I am from Bangladesh. Presently, I am living in Utah, USA.  I am doing my Master's in Civil and Construction Engineering Department at Brigham Young University (BYU) under the supervision of Dr. Dan Ames. My favorite thing to do is to travel to new places and spend time with family, my cat, and friends. I am fond of watching sunrises and sunsets. Not to forget, I am a big foodie.</p>
+    <p>In this page, I will list all the things I will do in this CE-514 course and link down the webpages in the useful links as well. I am also keeping the pictures of the things I'm interested in because I love those.</p>
 
     <h3>Things I’m Interested In</h3>
     <div class="interests">
