--- a/CE514.html
+++ b/CE514.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name's Page</title>
+    <title>CE - 514 Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
