--- a/CE514.html
+++ b/CE514.html
@@ -81,13 +81,10 @@
         <img src="Interest3.jpeg" alt="Interest 3">
     </div>
 
-    <h3>Useful Links</h3>
+    <h3>CE - 514 Assignment Links</h3>
     <ul>
-        <li><a href="https://www.linkedin.com/in/tasfiamahjarin26" target="_blank">My LinkedIn</a></li>
-        <li><a href="https://github.com/tasfia26" target="_blank">My GitHub</a></li>
-        <li><a href="https://cce.byu.edu/" target="_blank">Civil and Construction Engineering Department (BYU)</a></li>
-        <li><a href="https://www.instagram.com/tasfia_mahjarin" target="_blank">My Instagram</a></li>
-        <li><a href="leaflet.html" target="_blank">View My Locations on the Map</a></li> <!-- Link to leaflet.html -->
+        
+        <li><a href="leaflet.html" target="_blank">View My Locations on the Map - Leaflet Map</a></li> <!-- Link to leaflet.html -->
     </ul>
 </body>
 </html>
