--- a/CE514.html
+++ b/CE514.html
@@ -66,6 +66,8 @@
     <h3>CE - 514 Assignment Links</h3>
     <ul>
         <li><a href="leaflet.html" target="_blank">View My Locations on the Map - Leaflet Map</a></li> <!-- Link to leaflet.html -->
+        <li><a href="unitconverter.html" target="_blank">Unit Converter for Linear Units</a></li> <!-- Link to unitconverter.html -->
+        
     </ul>
 </body>
 </html>
