--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
         <li><a href="https://www.instagram.com/tasfia_mahjarin" target="_blank">My Instagram</a></li>
         <li><a href="CE514.html" target="_blank">Go to CE514 Page</a></li> <!-- Link to CE514 page -->
         <li><a href="leaflet.html" target="_blank">View My Locations on the Map</a></li> <!-- Link to leaflet.html -->
+        <li><a href="unitconverter.html" target="_blank">A3 - Unit Converter for Linear Units</a></li> <!-- Link to unitconverter.html -->
+        
     </ul>
 </body>
 </html>
