--- a/unitconverter.html
+++ b/unitconverter.html
@@ -38,6 +38,11 @@
         <div class="result" id="result">Converted value will appear here.</div>
     </div>
 
+    <!-- Link to the CSS styling page -->
+    <p>
+        <a href="styles.css" target="_blank">View CSS Styling</a>
+    </p>
+
     <script>
     // Conversion factors
     const conversionRates = {
