--- a/leaflet.html
+++ b/leaflet.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map of My Locations</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="leafletstyling.css" />
 </head>
 <body>
     <h1>My Locations on the Map</h1>
