--- a/leaflet.html
+++ b/leaflet.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map of My Locations</title>
-    <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="leafletstyling.css" />
-    <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <style>
+        #map {
+            height: 600px;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <h1>My Locations on the Map</h1>
     <div id="map"></div>
     
-    <!-- Leaflet JavaScript -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
     <script>
@@ -57,3 +59,4 @@
     </script>
 </body>
 </html>
+
