--- a/leaflet.html
+++ b/leaflet.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map of My Locations</title>
+    <!-- Link to the custom CSS file -->
     <link rel="stylesheet" href="leafletstyles.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
