--- a/leaflet.html
+++ b/leaflet.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map of My Locations</title>
-    <!-- Link to the hosted leafletstyles.css -->
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/username/repository/main/leafletstyles.css" />
+    <link rel="stylesheet" href="leafletstyles.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
