--- a/leaflet.html
+++ b/leaflet.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>My Locations on the Map</h1>
+    <p>
+        <a href="leafletstyles.css" target="_blank">View Leaflet CSS Styling Code</a>
+    </p>
     <div id="map"></div>
     
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
