--- a/CE514.html
+++ b/CE514.html
@@ -11,6 +11,9 @@
     <h2>Tasfia Mahjarin</h2>
     <p>Course Name: Geospatial Software Development - CE 514</p>
     <p>Semester: Winter - 2025</p>
+    <p>
+        <a href="ce514styles.css" target="_blank">View CE - 514 CSS Styling Code</a>
+    </p>
 
     <h3>About Me</h3>
     <img id="profile-picture" src="your-picture.jpg" alt="Your Picture">
