--- a/csslinks.html
+++ b/csslinks.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #4facfe, #00f2fe); /* Gradient from blue to cyan */
+            background: linear-gradient(to right, #2c3e50, #bdc3c7); /* Black-greyish gradient */
             color: white;
         }
         h1 {
@@ -30,7 +30,7 @@
         }
         .link-container a:hover {
             text-decoration: underline;
-            color: #ffd700; /* Gold color when hovering */
+            color: #f39c12; /* Gold color on hover */
         }
     </style>
 </head>
