--- a/csslinks.html
+++ b/csslinks.html
@@ -10,11 +10,12 @@
             margin: 0;
             padding: 0;
             background: linear-gradient(to right, #2c3e50, #bdc3c7); /* Black-greyish gradient */
-            color: white;
+            color: white; /* Default text color for the body */
         }
         h1 {
             text-align: center;
             padding: 20px;
+            color: #ecf0f1; /* Light color for the title */
         }
         .link-container {
             margin-top: 20px;
@@ -25,7 +26,7 @@
         .link-container a {
             margin: 10px;
             text-decoration: none;
-            color: #ffffff;
+            color: #1abc9c; /* Different color for links */
             font-size: 18px;
         }
         .link-container a:hover {
