--- a/CE514.html
+++ b/CE514.html
@@ -23,6 +23,7 @@
     <div class="assignment-links">
         <a href="leaflet.html" target="_blank">A2 - View My Locations on the Map - Leaflet Map</a>
         <a href="unitconverter.html" target="_blank">A3 - Unit Converter for Linear Units</a>
+        <a href="csslinks.html" target="_blank">A4 - CSS Styling Links</a>
     </div>
 </body>
 </html>
