--- a/unitconverter.html
+++ b/unitconverter.html
@@ -40,7 +40,7 @@
 
     <!-- Link to the CSS styling page -->
     <p>
-        <a href="styles.css" target="_blank">View CSS Styling Code</a>
+        <a href="styles.css" target="_blank">View Unit Converter CSS Styling Code</a>
     </p>
 
     <script>
