--- a/leafletanddistance.html
+++ b/leafletanddistance.html
@@ -10,8 +10,8 @@
 <body>
     <header style="text-align: center; margin: 20px;">
         <h1>Tasfia Mahjarin</h1>
-        <p><strong>Assignment Number:</strong> A5 - Build an Interactive Page with Leaflet Open Source Mapping API</p>
-        <p><strong>Class:</strong> CE - 514</p>
+        <p><strong>Assignment:</strong> A5 - Build an Interactive Page with Leaflet Open Source Mapping API</p>
+        <p><strong>Class:</strong> CE - 514 (Geospatial Software Development)</p>
         <p><strong>Date:</strong> 27 January 2025</p>
     </header>
 
