--- a/CE514.html
+++ b/CE514.html
@@ -24,6 +24,7 @@
         <a href="leaflet.html" target="_blank">A2 - View My Locations on the Map - Leaflet Map</a>
         <a href="unitconverter.html" target="_blank">A3 - Unit Converter for Linear Units</a>
         <a href="csslinks.html" target="_blank">A4 - CSS Styling Links</a>
+        <a href="leafletanddistance.html" target="_blank">A5 - Build an Interactive Page with Leaflet Open Source Mapping</a>
     </div>
 </body>
 </html>
