--- a/leafletanddistance.html
+++ b/leafletanddistance.html
@@ -17,7 +17,7 @@
 
     <h2 style="text-align: center;">My Locations on the Map</h2>
     <p style="text-align: center;">
-        <a href="leafletstyles.css" target="_blank">View Leaflet CSS Styling Code</a>
+        <a href="leafletanddistancestyles.css" target="_blank">View Leaflet CSS Styling Code</a>
     </p>
     
     <!-- Map Container -->
