--- a/leafletanddistance.html
+++ b/leafletanddistance.html
@@ -189,9 +189,9 @@
         var home = [23.8814, 90.3873]; // My Home Location (Dhaka, Bangladesh)
 
         // Add the fixed markers and polygons here so they do not get removed on distance calculation
-        L.marker(homeTown, { icon: homeTownIcon }).addTo(map).bindPopup("<b>My Home Town</b><br>Uttara, Dhaka");
+        L.marker(homeTown, { icon: homeTownIcon }).addTo(map).bindPopup("<b>My Home Town</b><br>Dhaka, Bangladesh");
         L.marker(undergradUniversity, { icon: undergradIcon }).addTo(map).bindPopup("<b>Undergrad University</b><br>Military Institute of Science and Technology (MIST)");
-        L.marker(home, { icon: homeIcon }).addTo(map).bindPopup("<b>My Home</b><br>Dhaka, Bangladesh");
+        L.marker(home, { icon: homeIcon }).addTo(map).bindPopup("<b>My Home</b><br>Uttara, Dhaka, Bangladesh");
 
         // Home Town Polygon (Uttara, Dhaka)
         var polygonLatLngs = [
