--- a/leafletanddistancenew.html
+++ b/leafletanddistancenew.html
@@ -35,7 +35,7 @@
         <label for="lng2">Longitude 2:</label>
         <input type="text" id="lng2" placeholder="Enter Longitude 2">
         <br><br>
-        <button onclick="drawSphereAndCalculate()">Draw Sphere and Calculate Distance</button>
+        <button onclick="drawSphereAndCalculate()">Draw Shortest Path and Calculate Distance</button>
     </div>
 
     <!-- Display the calculated distance -->
