--- a/leafletkml.html
+++ b/leafletkml.html
@@ -43,7 +43,7 @@
                 .catch(error => console.error("Error loading KML:", error));
         }
 
-        loadKML("mapdata.kml"); // Load the KML file
+        loadKML("bangladesh.kml"); // Load the KML file
 
         // Add marker for BYU
         var byuMarker = L.marker([40.2338, -111.6585]).addTo(map);
